Development of the algorithm's working structure(code): Further development of the algorythm and resolution of past issues [#7]